--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My HTML-page</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./my-script.js" defer></script>
+    <script src=".//js/my-script.js" defer></script>
 
 </head>
 <body>
-    <script src="./my-script.js" type="module"></script>
+    <script src=".//js/my-script.js" type="module"></script>
+    <script src=".//js/my-script-1.js" type="module"></script>
+    <script src="" type="module"></script>
 </body>
 </html>
